--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,7 @@
         tools:context=".MainActivity">
 
     <TextView
+            android:id="@+id/tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Hello World!"
@@ -15,5 +16,12 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
+
+    <Button
+            android:id="@+id/bt_request"
+            android:text="request"
+            android:layout_width="wrap_content" android:layout_height="wrap_content"
+
+    />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
