--- a/app/src/main/res/layout/login_activity_layout.xml
+++ b/app/src/main/res/layout/login_activity_layout.xml
@@ -27,7 +27,7 @@
     />
 
     <FrameLayout
-            android:id="@+id/frameLayout"
+            android:id="@+id/fl_container"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginTop="@dimen/x10"
