--- a/app/src/main/res/layout/login_layout.xml
+++ b/app/src/main/res/layout/login_layout.xml
@@ -40,7 +40,7 @@
     />
 
     <com.littlegreens.wanandroidmvp.weidgt.SubmitView
-            android:id="@+id/sv_register"
+            android:id="@+id/sv_login"
             android:layout_width="match_parent"
             android:layout_height="44dp"
             android:layout_marginTop="30dp"
