--- a/app/src/main/res/layout/login_layout.xml
+++ b/app/src/main/res/layout/login_layout.xml
@@ -15,7 +15,7 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="@dimen/x10"
+            android:layout_marginTop="@dimen/x40"
             android:layout_height="wrap_content"/>
 
     <com.littlegreens.wanandroidmvp.weidgt.AccountInputView
@@ -47,9 +47,10 @@
             android:background="@drawable/bg_solid_round_color_main_radius_max"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/piv_register_password"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="@dimen/x30"
             android:gravity="center"
-            android:text="注册"
+            android:text="登录"
             android:textColor="@color/text_white"
             android:textSize="@dimen/text_content"
             app:sv_bindEditText1="@+id/piv_register_account"
