--- a/app/src/main/res/layout/register_layout.xml
+++ b/app/src/main/res/layout/register_layout.xml
@@ -17,7 +17,7 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="@dimen/x10"
+            android:layout_marginTop="@dimen/x40"
             android:layout_height="wrap_content"/>
 
     <com.littlegreens.wanandroidmvp.weidgt.AccountInputView
@@ -56,10 +56,11 @@
             android:layout_width="match_parent"
             android:layout_height="44dp"
             android:layout_marginTop="30dp"
+            android:layout_marginBottom="@dimen/x30"
             android:background="@drawable/bg_solid_round_color_main_radius_max"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/re_register_password"
+            app:layout_constraintBottom_toBottomOf="parent"
             android:gravity="center"
             android:text="注册"
             android:textColor="@color/text_white"
