--- a/app/src/main/res/layout/fragment_home_layout.xml
+++ b/app/src/main/res/layout/fragment_home_layout.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/baseParent"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -23,19 +24,24 @@
             android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/actionBarCommon"
-            android:paddingBottom="@dimen/bottom_bar_height"
-            android:layout_marginBottom="@dimen/bottom_bar_height"
-            >
+            app:srlEnableLoadMore="false">
 
-        <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recyclerView"
+        <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:clipToPadding="false"
-                android:overScrollMode="never"
-                android:scrollbars="vertical"
+                android:layout_height="match_parent">
 
-                />
+            <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recyclerView"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:clipToPadding="false"
+                    android:overScrollMode="never"
+                    android:paddingBottom="@dimen/bottom_bar_height"
+                    android:scrollbars="vertical"
+                    tools:listitem="@layout/rv_item_article" />
+
+        </FrameLayout>
+
 
     </com.scwang.smartrefresh.layout.SmartRefreshLayout>
 
